--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -488,6 +488,39 @@
     "    dataset_staging = \"staging\"\n",
     "    join_staging_with_warehouse_tables(project_id, dataset_staging, staging_table_name, dataset_warehouse, warehouse_table_names)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlsx_path = \"your orders dataset path- xlsx file\"\n",
+    "project_id = \"your project id\"\n",
+    "table_name = \"superstore\"\n",
+    "schema_file_path = \"your schema file path\"\n",
+    "date_columns=[\"order_date\", \"ship_date\"]\n",
+    "columns_to_check=[\"customer_id\", \"order_date\", \"order_id\", \"product_id\"]\n",
+    "sk_json_file = \"your surrogate key json file path\"\n",
+    "warehouse_table_names = [\"date\", \"customer\", \"product\", \"fact_orders\",\"fact_orders_customer\", \n",
+    "                         \"fact_orders_date\", \"fact_orders_product\"]\n",
+    "orders_pipeline(xlsx_path, project_id, table_name , schema_file_path, date_columns, columns_to_check, sk_json_file, warehouse_table_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_path = \"Your CSV file path\"\n",
+    "project_id = \"your project id\"\n",
+    "table_name = \"returns\"\n",
+    "schema_file_path = \"your schema file path\"\n",
+    "columns_to_check=[\"order_id\"]\n",
+    "warehouse_table_names = [\"fact_orders\"]\n",
+    "returns_pipeline(csv_path , project_id , table_name, schema_file_path, columns_to_check, warehouse_table_names)\n"
+   ]
   }
  ],
  "metadata": {
