warehouse and pipelines done

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -495,10 +495,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xlsx_path = \"your orders dataset path- xlsx file\"\n",
+    "#creating warehouse schema from json file\n",
+    "project_id = \"your project id\"\n",
+    "json_path = \"your warehouse schema json file path\"\n",
+    "create_warehouse_schema(project_id = project_id, json_path = json_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlsx_path = \"your orders dataset path - xlsx file\"\n",
     "project_id = \"your project id\"\n",
     "table_name = \"superstore\"\n",
-    "schema_file_path = \"your schema file path\"\n",
+    "schema_file_path = \"your staging schema file path\"\n",
     "date_columns=[\"order_date\", \"ship_date\"]\n",
     "columns_to_check=[\"customer_id\", \"order_date\", \"order_id\", \"product_id\"]\n",
     "sk_json_file = \"your surrogate key json file path\"\n",
@@ -516,7 +528,7 @@
     "csv_path = \"Your CSV file path\"\n",
     "project_id = \"your project id\"\n",
     "table_name = \"returns\"\n",
-    "schema_file_path = \"your schema file path\"\n",
+    "schema_file_path = \"your staging schema for returns file path\"\n",
     "columns_to_check=[\"order_id\"]\n",
     "warehouse_table_names = [\"fact_orders\"]\n",
     "returns_pipeline(csv_path , project_id , table_name, schema_file_path, columns_to_check, warehouse_table_names)\n"
